# audiotrip_choreo_viewer

./: .clang-format  .gitignore  .gitmodules  AudioTrip_LevelViewer.data  AudioTrip_LevelViewer.js  CMakeLists.txt  CNAME  README.md  barrier.scad  barrier.stl  emscripten.html  index.html
.github/workflows/: emscripten.yml
include/: Application.h  GUIState.h  GUIStyleCyber.h  common_defs.h
include/audiotrip/: dtos.h  utils.h
include/raylib_ext/: rlights.h  scoped.h  text3d.h
include/rendering/: SkyBox.h  ribbon_helpers.h
include/splines/: matrix3x3.h  spline3d.h
resources-src/: atviewer.rgl  barrier.scad  ribbon_section_get_points.py
resources/models/: AT_DIRGEM.STL  AT_DRUM.STL  AT_GEM.STL  README.md  barrier.mtl  barrier.stl  dirgem.mtl  gem.mtl  materials.mtl  ribbon.mtl  ribbon_gem.mtl
resources/shaders/: README.md
resources/shaders/glsl100/: lighting.fs
resources/shaders/glsl330/: lighting.fs
src/: Application.cpp  ApplicationGUI.cpp  ApplicationRendering.cpp  main.cpp  raygui.cpp
src/audiotrip/: dtos.cpp  utils.cpp
src/raylib_ext/: text3d.cpp
src/rendering/: SkyBox.cpp  ribbon_helpers.cpp
src/splines/: spline3d.cpp
